tests/baselines/reference/sourceMapValidationDestructuringParametertArrayBindingPattern2(target=es2015).errors.txt
sourceMapValidationDestructuringParametertArrayBindingPattern2.ts(7,15): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringParametertArrayBindingPattern2.ts(11,15): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringParametertArrayBindingPattern2.ts(15,15): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringParametertArrayBindingPattern2.ts(15,24): error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
sourceMapValidationDestructuringParametertArrayBindingPattern2.ts(19,15): error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.


==== sourceMapValidationDestructuringParametertArrayBindingPattern2.ts (5 errors) ====
    declare var console: {
        log(msg: any): void;
    }
    type Robot = [string, [string, string]];
    var robotA: Robot = ["trimmer", ["trimming", "edging"]];
    
    function foo1([, skillA]: Robot) {
                  ~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(skillA);
    }
    
    function foo2([nameMB]: Robot) {
                  ~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMB);
    }
    
    function foo3([nameMA, [primarySkillA, secondarySkillA]]: Robot) {
                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type '[string, string]' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(nameMA);
    }
    
    function foo4([...multiRobotAInfo]: Robot) {
                  ~~~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type 'Robot' must have a '[Symbol.iterator]()' method that returns an iterator.
        console.log(multiRobotAInfo);
    }
    
    foo1(robotA);
    foo1(["roomba", ["vacuum", "mopping"]]);
    
    foo2(robotA);
    foo2(["roomba", ["vacuum", "mopping"]]);
    
    foo3(robotA);
    foo3(["roomba", ["vacuum", "mopping"]]);
    
    foo4(robotA);
    foo4(["roomba", ["vacuum", "mopping"]]);